// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`v-text > should convert v-text to textContent 1`] = `
"import { setText as _setText, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div></div>")

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  let _str, __str
  _renderEffect(() => {
    __str = _ctx.str
    if(_str !== __str) {
      _setText(n0, __str)
      _str = __str
    }
  })
  return n0
}"
`;

exports[`v-text > should raise error and ignore children when v-text is present 1`] = `
"import { setText as _setText, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = t0()
  let _test, __test
  _renderEffect(() => {
    __test = _ctx.test
    if(_test !== __test) {
      _setText(n0, __test)
      _test = __test
    }
  })
  return n0
}"
`;

exports[`v-text > should raise error if has no expression 1`] = `
"import { template as _template } from 'vue';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = t0()
  return n0
}"
`;
